--- a/starscape-frontend/package.json
+++ b/starscape-frontend/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tresjs/core": "^3.7.0",
     "pinia": "^2.1.7",
     "svelte-adapter": "^0.5.0",
+    "three": "^0.161.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
