--- a/starscape-frontend/package.json
+++ b/starscape-frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tresjs/core": "^3.7.0",
     "pinia": "^2.1.7",
+    "primevue": "^3.49.1",
     "svelte-adapter": "^0.5.0",
     "three": "^0.161.0",
     "vue": "^3.3.11",
