--- a/starscape-frontend/package.json
+++ b/starscape-frontend/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@tresjs/core": "^3.7.0",
+    "chart.js": "^4.4.2",
     "pinia": "^2.1.7",
     "primevue": "^3.49.1",
     "svelte-adapter": "^0.5.0",
     "three": "^0.161.0",
     "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
